--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ python-dateutil==2.8.2
 PyYAML==5.4.1
 quadprog==0.1.11
 six==1.16.0
-torch==1.9.1
-torchvision==0.10.1
+torch==1.9.1+cu111
+torchvision==0.10.1+cu111
 tqdm==4.62.3
 typing-extensions==3.10.0.2
